[Fix Image generation] - Make testing changes to ensure that float32 is being tested properly.